# SW-Widgets

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: SW_WidgetsConfig.cmake.in
examples/demo_app/: CMakeLists.txt
examples/swribbon/: CMakeLists.txt  main.cpp
examples/swtoggleswitch/: CMakeLists.txt  main.cpp
include/SWFluentUI/: swribbon.hpp  swtoggleswitch.hpp
src/SWFluentUI/: swribbon.cpp  swtoggleswitch.cpp
